- Fixed incorrect function names on FreeBSD where inet_pton() was named 	__inet_pton() and inet_ntop() was named __inet_ntop() - Fixed bug #39685 (iconv() - undefined function) - Fixed bug #38852 (XML-RPC Breaks iconv)